# minerva-rs

./: Cargo.toml  example.xml  nightly_results.xml
migrations/2023-03-03-185416_create_test_results/: down.sql  up.sql
migrations/2023-04-14-032901_add-summaries-table/: down.sql  up.sql
src/: example.xml  main.rs  models.rs  schema.rs
