[package]
name = "minerva"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0.144", features = ["derive"]}
serde-xml-rs = "0.6.0"
diesel = { version = "2.0.0", features = ["postgres"]}
dotenvy = "0.15"